--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@iso/boilerplate",
   "version": "3.1.0",
   "private": true,
-  "homepage": "http://michael-noah.github.io/td-congo",
+  "homepage": "https://michael-noah.github.io/td-congo",
   "dependencies": {
     "antd": "^4.6.3",
     "antd-local-icon": "^0.1.3",
