--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@iso/boilerplate",
-  "version": "3.1.0",
+  "name": "td_inventory",
+  "version": "2.1.0",
   "private": true,
-  "homepage": "https://Michael-Noah.github.io/td-congo",
+  "main": "index.js",
+  "homepage": "https://Michael-Noah.github.io/",
   "dependencies": {
     "antd": "^4.6.3",
     "antd-local-icon": "^0.1.3",
@@ -43,7 +44,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-"deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "start": "cross-env PORT=3004 react-app-rewired start",
     "build": "react-app-rewired build",
     "serve": "serve -s build",
